layout bug fixed.

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -747,6 +747,8 @@ footer{
 	}
 }
 
+
+
 #photos{
 
 	@photo-width:312px;
@@ -852,6 +854,13 @@ footer{
 		-moz-box-shadow: 1px 1px 5px #ccc;
 		-webkit-box-shadow: 1px 1px 5px #ccc;
 		
+	}
+}
+
+.photos{
+	&.nofix{
+		margin-left: 212px;
+		width: calc(~"100% - 212px");
 	}
 }
 
